--- a/mandelbulber2/formula/ui/transf_difs_polyhedra.ui
+++ b/mandelbulber2/formula/ui/transf_difs_polyhedra.ui
@@ -480,6 +480,13 @@
        </layout>
       </item>
       <item>
+       <widget class="MyCheckBox" name="checkBox_fold_color_aux_color_enabledB_false">
+        <property name="text">
+         <string notr="true">cumulative</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <layout class="QGridLayout" name="gridLayout_20" columnstretch="0,1">
         <property name="spacing">
          <number>2</number>
