--- a/mandelbulber2/formula/ui/transf_difs_torus_v4.ui
+++ b/mandelbulber2/formula/ui/transf_difs_torus_v4.ui
@@ -1024,7 +1024,7 @@
         <item row="0" column="0">
          <widget class="QLabel" name="label_290">
           <property name="text">
-           <string>base color:</string>
+           <string>palette offset:</string>
           </property>
          </widget>
         </item>
@@ -1227,9 +1227,9 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>MyDoubleSpinBox</class>
-   <extends>QDoubleSpinBox</extends>
-   <header>my_double_spin_box.h</header>
+   <class>MyCheckBox</class>
+   <extends>QCheckBox</extends>
+   <header>my_check_box.h</header>
   </customwidget>
   <customwidget>
    <class>MyGroupBox</class>
@@ -1238,14 +1238,14 @@
    <container>1</container>
   </customwidget>
   <customwidget>
+   <class>MyDoubleSpinBox</class>
+   <extends>QDoubleSpinBox</extends>
+   <header>my_double_spin_box.h</header>
+  </customwidget>
+  <customwidget>
    <class>MySpinBox</class>
    <extends>QSpinBox</extends>
    <header>my_spin_box.h</header>
-  </customwidget>
-  <customwidget>
-   <class>MyCheckBox</class>
-   <extends>QCheckBox</extends>
-   <header>my_check_box.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
